# Tsubaki_Extensions

./: .gitignore  CONTRIBUTING.md  EXTENSION_STATUS.md  LICENSE  NOTES.md  README.md  build.ps1  build.sh  build_addon.ps1  create_zips.ps1  index.json
.github/workflows/: build-extensions.yml
archive/fmreader-rhai/: manifest.json  plugin.rhai
archive/mangapark-rhai/: manifest.json
archived/flixscans-rhai/: manifest.json
archived/foolslide-rhai/: manifest.json  plugin.rhai
archived/gelbooru-rhai/: manifest.json  plugin.rhai
archived/heytoon-rhai/: plugin.rhai
archived/mangakakalot-rhai/: manifest.json  plugin.rhai
archived/mangapark-rhai/: manifest.json  plugin.rhai
archived/mycomiclist-rhai/: manifest.json
docs/: EXTENSION_API.md  MANIFEST_SCHEMA.md
sources/anilist/: anilist.rhai  manifest.json  settings_schema.json
sources/arenascans-rhai/: manifest.json  plugin.rhai
sources/asurascans-rhai/: manifest.json  plugin.rhai
sources/batcave/: manifest.json  plugin.rhai
sources/batcave-rhai/: manifest.json  plugin.rhai
sources/batoto-rhai/: manifest.json  plugin.rhai
sources/comick-rhai/: manifest.json  plugin.rhai
sources/comix/: manifest.json  plugin.rhai
sources/comix-rhai/: manifest.json  plugin.rhai
sources/danbooru/: manifest.json
sources/danbooru-rhai/: manifest.json  plugin.rhai
sources/demonicscans/: manifest.json  plugin.rhai
sources/demonicscans-rhai/: manifest.json  plugin.rhai
sources/mangadex-wasm/: Cargo.toml  build.sh  manifest.json
sources/mangadex-wasm/src/: lib.rs
tools/: bump-versions.ps1  generate-icons.ps1
(+169 files in other folders)
