[package]
name = "mangadex-wasm"
version = "1.0.0"
edition = "2021"
authors = ["Tsubaki Team"]
description = "MangaDex manga source addon compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
